--- a/.github/workflows/issue-to-pr.yml
+++ b/.github/workflows/issue-to-pr.yml
@@ -6,7 +6,7 @@ on:
 
 jobs:
   issue-to-pr:
-    if: github.event.issue.labels.*.name contains 'contenu'
+    if: contains(join(github.event.issue.labels.*.name, ','), 'contenu')
     runs-on: ubuntu-latest
     steps:
       - uses: actions/checkout@v4
