issue-2-pr: fix parsing of issue attributes

--- a/.github/workflows/issue-to-pr.yml
+++ b/.github/workflows/issue-to-pr.yml
@@ -11,27 +11,49 @@ jobs:
     steps:
       - uses: actions/checkout@v4
 
-      - name: Afficher le JSON de l'event
-        run: cat "$GITHUB_EVENT_PATH"
-
       - name: Générer le fichier Markdown depuis l’issue
         id: generate
         run: |
           TITLE="$(jq -r '.issue.title' "$GITHUB_EVENT_PATH" | sed 's/^\[Page\] //')"
-          BODY="$(jq -r '.issue.body' "$GITHUB_EVENT_PATH")"
-          CATEGORIE="$(echo "$BODY" | grep -A1 'Catégorie' | tail -n1)"
-          DATE="$(echo "$BODY" | grep -A1 'Date de publication' | tail -n1)"
-          CONTENU="$(echo "$BODY" | awk '/Contenu \(Markdown accepté\)/{getline; print; exit}')"
-          FILENAME="content/posts/$(date +%s)-$(echo "$TITLE" | tr ' ' '-' | tr '[:upper:]' '[:lower:]').md"
-          echo "---" > "$FILENAME"
-          echo "title: \"$TITLE\"" >> "$FILENAME"
-          echo "category: \"$CATEGORIE\"" >> "$FILENAME"
-          echo "date: \"$DATE\"" >> "$FILENAME"
-          echo "layout: layouts/post.html" >> "$FILENAME"
-          echo "---" >> "$FILENAME"
-          echo "" >> "$FILENAME"
-          echo "$CONTENU" >> "$FILENAME"
-
+          BODY="$(jq -r '.issue.body' "$GITHUB_EVENT_PATH")"          
+          extract_block() {
+            awk -v header="$1" '
+              $0 ~ header {
+                getline
+                block = ""
+                while (getline && $0 !~ /^### /) {
+                  block = block $0 "\n"
+                }
+                print block
+                exit
+              }
+            '
+          }
+          TITRE="$(echo "$BODY" | extract_block '^### Titre de la page')"
+          CONTENU="$(echo "$BODY" | extract_block '^### Contenu.*')"
+          CATEGORIE="$(echo "$BODY" | extract_block '^### Catégorie')"
+          # Nettoyer les retours à la ligne en trop
+          TITRE="$(echo "$TITRE" | sed '/^\s*$/d')"
+          CONTENU="$(echo "$CONTENU" | sed '/^\s*$/d')"
+          CATEGORIE="$(echo "$CATEGORIE" | sed '/^\s*$/d')"
+          echo "Titre : $TITRE"
+          echo "Contenu : $CONTENU"
+          echo "Catégorie : $CATEGORIE"
+          # Générer la date courante au format yyyy-mm-dd
+          DATE="$(date +%F)"
+          # Générer le nom du fichier
+          FILENAME="content/posts/$DATE-$(echo "$TITRE" | tr ' ' '-' | tr '[:upper:]' '[:lower:]').md"
+          mkdir -p content/posts
+          # Générer le front matter et le contenu
+          cat > "$FILENAME" <<EOF
+          ---
+          title: "$TITRE"
+          category: "$CATEGORIE"
+          date: "$DATE"
+          layout: layouts/post.html
+          ---
+          $CONTENU
+          EOF
       - name: Créer la Pull Request
         uses: peter-evans/create-pull-request@v6
         with:
